style: update checkov section title

--- a/templates/security_report_template.html
+++ b/templates/security_report_template.html
@@ -103,7 +103,7 @@
             {% endfor %}
         </table>
         {% endif %} {% if checkov_missing_tags %}
-        <h2>Checkov - Errores por falta de etiquetas obligatorias</h2>
+        <h2>Checkov - Errores de tags</h2>
         <table>
             <tr>
                 <th>Archivo</th>
